<resources>
    <string name="app_name">MultiApp</string>

    <!-- Main -->
    <string name="calculator">Calculadora</string>
    <string name="to_do">Lista de Tarefas</string>
    <string name="coverter">Conversor</string>
    <string name="search_cep">Buscar CEP</string>

    <!-- Calculadora -->
    <string name="result">Resultado</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn_divider">/</string>
    <string name="btn_multiplier">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_add">+</string>
    <string name="btn_clear">C</string>
    <string name="btn_equal">=</string>

    <!-- Lista de tarefas -->
    <string name="adicionar_nova_tarefa">Adicionar nova tarefa</string>
    <string name="adicionar">Adicionar</string>

    <!-- Conversor -->
    <string name="converter">Converter</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="resultado">Resultado:</string>

    <!-- Consultor de CEP -->
    <string name="cep">CEP</string>
    <string name="buscar_cep">Buscar</string>
    <string name="rua">Rua:</string>
    <string name="numero">N°:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="complemento">Complemento:</string>
    <string name="uf">UF:</string>
    <string name="regiao">Região:</string>
    <string name="ibge">IBGE:</string>
    <string name="gia">GIA:</string>

</resources>