<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity"
    android:padding="16dp">

    <!-- Exibição do Resultado -->
    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:hint="@string/result"
        android:inputType="none"
        android:padding="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botões -->
    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display">

        <!-- Números e Operadores -->
        <Button
            android:id="@+id/btn7"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn7"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn8"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn8"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn9"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn9"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_divider"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn4"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn4"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn5"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn5"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn6"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn6"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_multiplier"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn1"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn1"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn2"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn2"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn3"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn3"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_minus"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnClear"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_clear"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btn0"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn0"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_equal"
            android:textColor="#212121" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="1dp"
            android:paddingVertical="24dp"
            android:text="@string/btn_add"
            android:textColor="#212121" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>